--- a/templates/mobile/sidebar.css
+++ b/templates/mobile/sidebar.css
@@ -63,7 +63,7 @@
         margin-top:2px;
         margin-left:2px;
     }
-    
+
 }
 
 @media  only screen and (min-height: 481px) and (max-height: 580px) {
@@ -119,7 +119,7 @@
       margin-top:7px;
       margin-left:7px;
     }
-    
+
     .icon-layers {
         background: url("images/icons.png") no-repeat scroll 0 0 rgba(0, 0, 0, 0);
         background-position: -100px 0;
@@ -335,7 +335,7 @@
         margin-top:14px;
         margin-left:14px;
     }
-    
+
 }
 
 @media only screen and (min-height: 901px) {
@@ -403,7 +403,7 @@
         margin-top:17px;
         margin-left:17px;
     }
-    
+
 }
 
 .glyphicon-white{
@@ -527,6 +527,13 @@
 
 #layertree {
   height: inherit;
+}
+
+#resultpanel {
+    display: block;
+    overflow-y: scroll;
+    overflow-x: hidden;
+    height: inherit;
 }
 
 #map-sidebar a[class*="ItemActive"] {
