--- a/templates/wfm-osfc/sidebar.css
+++ b/templates/wfm-osfc/sidebar.css
@@ -130,7 +130,7 @@
         margin-top:5px;
         margin-left:5px;
     }
-    
+
 }
 
 @media screen and (min-height: 581px) and (max-height: 660px) {
@@ -334,7 +334,7 @@
         margin-top:14px;
         margin-left:14px;
     }
-    
+
 }
 
 @media only screen and (min-height: 901px) {
@@ -402,7 +402,7 @@
         margin-top:17px;
         margin-left:17px;
     }
-    
+
 }
 
 .glyphicon-white{
@@ -527,6 +527,13 @@
 
 #layertree {
   height: inherit;
+}
+
+#resultpanel {
+    display: block;
+    overflow-y: scroll;
+    overflow-x: hidden;
+    height: inherit;
 }
 
 #map-sidebar a[class*="ItemActive"] {
